[SCM-591] Move to Java 1.5 : fix some generics warning in hg provider
git-svn-id: https://svn.apache.org/repos/asf/maven/scm/trunk@1057017 13f79535-47bb-0310-9956-ffa450edef68